change hosting config

--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build-and-push-image:
-    if: github.repository == 'jackyzha0/quartz'
+    if: github.repository == 'toruta39/quartz'
     runs-on: ubuntu-latest
     permissions:
       contents: read
